--- a/YbOH_Calcs_Tutorial.ipynb
+++ b/YbOH_Calcs_Tutorial.ipynb
@@ -32,21 +32,24 @@
    "source": [
     "First, we construct the Hamiltonian as a class carrying a symbolic function. Using this function, the Hamiltonian can be evaluated at different values of E and B. The symbolic function is assembled once, reducing the burden for large matrices.\n",
     "\n",
-    "The class initialization arguments are: isotope, state, N_range, all_M\n",
+    "The class initialization arguments are: isotope, state, N_range, M_values, I, S, round\n",
     "\n",
     "isotope = string denoting Yb isotope (ie '174')\\\n",
     "state = string denoting vibronic state (ie 'X010')\\\n",
     "N_range = tuple denoting (Nmin,Nmax)\\\n",
-    "all_M = default is True, or else it will do M>0 only"
+    "M_values = options are 'all', 'pos', 'none'. Default is 'all'\n",
+    "I = Array of nuclear spins, $[I_Yb, I_H]$. Default is $[0,1/2]$.\n",
+    "S = Electronic spin. Default is 1/2\n",
+    "round = how many digits after decimal to round results "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X010_174= YbOHLevels.initialize_state('174','X010',[1],all_M=True)"
+    "X010_174= YbOHLevels.initialize_state('174','X010',[1],M_values = 'all',I=[0,1/2],S=1/2,round=4)"
    ]
   },
   {
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +71,15 @@
       "iso_state\n",
       "isotope\n",
       "state\n",
+      "N_range\n",
+      "M_values\n",
+      "round\n",
+      "e_spin\n",
+      "I_spins\n",
+      "library\n",
       "parameters\n",
       "matrix_elements\n",
       "hunds_case\n",
-      "Lambda\n",
-      "N_range\n",
-      "all_M\n",
-      "round\n",
       "q_numbers\n",
       "q_str\n",
       "alt_q_numbers\n",
@@ -122,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -178,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +199,7 @@
        "[     0,      0,                       10.0, 0.47*Bz + 0.32*Ez + 7.4e+3]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,30 +234,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E = 7295.719141704238 MHz\n",
+      "E = 7295.719141704224 MHz\n",
       "\n",
-      " 9.9999346704268e-06 |Λ=-1,N=1,J=0.5,F=0.0,M=0.0> \n",
+      " 0.012399931304380576 |Λ=-1,N=1,J=0.5,F=1.0,M=0.0> \n",
       "\n",
-      " -9.9999346704268e-06 |Λ=1,N=1,J=0.5,F=0.0,M=0.0> \n",
+      " -0.012399931304380576 |Λ=1,N=1,J=0.5,F=1.0,M=0.0> \n",
       "\n",
-      " -0.012419918860670086 |Λ=-1,N=1,J=0.5,F=1.0,M=0.0> \n",
+      " -0.7069960832416989 |Λ=-1,N=1,J=1.5,F=1.0,M=0.0> \n",
       "\n",
-      " 0.012419918860670086 |Λ=1,N=1,J=0.5,F=1.0,M=0.0> \n",
+      " 0.7069960832416989 |Λ=1,N=1,J=1.5,F=1.0,M=0.0> \n",
       "\n",
-      " 0.7069953811991747 |Λ=-1,N=1,J=1.5,F=1.0,M=0.0> \n",
+      " 9.999944600306916e-05 |Λ=-1,N=1,J=1.5,F=2.0,M=0.0> \n",
       "\n",
-      " -0.7069953811991747 |Λ=1,N=1,J=1.5,F=1.0,M=0.0> \n",
-      "\n",
-      " -9.9999346704268e-05 |Λ=-1,N=1,J=1.5,F=2.0,M=0.0> \n",
-      "\n",
-      " 9.9999346704268e-05 |Λ=1,N=1,J=1.5,F=2.0,M=0.0> \n",
+      " -9.999944600306916e-05 |Λ=1,N=1,J=1.5,F=2.0,M=0.0> \n",
       "\n"
      ]
     }
@@ -3359,6 +3360,83 @@
    ],
    "source": [
     "complicated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.arange(abs(2-0),abs(2+0)+1,1):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'a': 1, 'b':2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in d.items():\n",
+    "    print(k,v)\n",
+    "    if k=='a':\n",
+    "        d[k] = v+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('a', 6), ('b', 2)])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.items()"
    ]
   },
   {
