--- a/YbOH_Calcs_Tutorial.ipynb
+++ b/YbOH_Calcs_Tutorial.ipynb
@@ -45,11 +45,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "X010_174= YbOHLevels.initialize_state('174','X010',[1],M_values = 'all',I=[0,1/2],S=1/2,round=4)"
+    "N_list = [i for i in range(2)]\n",
+    "print(N_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot construct decoupled basis without M values\n"
+     ]
+    }
+   ],
+   "source": [
+    "X010_174= YbOHLevels.initialize_state('174','X000',N_list,M_values = 'none',I=[0,1/2],S=1/2,round=4)"
    ]
   },
   {
@@ -3463,7 +3489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
