--- a/YbOH_Branching.ipynb
+++ b/YbOH_Branching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,25 +30,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot construct decoupled basis without M values\n"
+     ]
+    }
+   ],
    "source": [
-    "X000_174= YbOHLevels.initialize_state('174','X000',[0,1],all_M=True)"
+    "X000_174= YbOHLevels.initialize_state('174','X000',[0,1,2,3],M_values='none',I=[0,1/2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot construct decoupled basis without M values\n"
+     ]
+    }
+   ],
    "source": [
-    "A000_174= YbOHLevels.initialize_state('174','A000',[1,2],all_M=True)"
+    "A000_174= YbOHLevels.initialize_state('174','A000',[1,2],M_values='none',I=[0,1/2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bBJ'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X000_174.hunds_case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -70,13 +106,13 @@
     }
    ],
    "source": [
-    "BR0 = XA_branching_ratios(X000_174,A000_174,0,1e-6)\n",
+    "BR0 = XA_branching_ratios(X000_174,A000_174,0,0.0)\n",
     "BR1k = XA_branching_ratios(X000_174,A000_174,1000,1e-6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -102,17 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X000_174.eigensystem(0,1e-6);\n",
-    "A000_174.eigensystem(0,1e-6);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -162,8 +188,8 @@
     "x = np.arange(0,len(A000_174.evecs0))\n",
     "ax.set_yticks(y)\n",
     "ax.set_xticks(x)\n",
-    "y_labels = [gen_state_str(X000_174.evecs0[i],X000_174.q_numbers,[q for q in X000_174.q_str if (q=='N' or q=='J' or q=='M')],thresh=0.02,show_coeff=False) for i in range(y.size)]\n",
-    "x_labels = [gen_state_str(A000_174.evecs0[i],A000_174.q_numbers,[q for q in A000_174.q_str if (q=='L' or q=='J' or q=='M')],thresh=0.02,show_coeff=False) for i in range(x.size)]\n",
+    "y_labels = [gen_state_str(X000_174.evecs0[i],X000_174.q_numbers,[q for q in X000_174.q_str if (q=='N' or q=='J' or q=='F')],thresh=0.02,show_coeff=False) for i in range(y.size)]\n",
+    "x_labels = [gen_state_str(A000_174.evecs0[i],A000_174.q_numbers,[q for q in A000_174.q_str if (q=='L' or q=='J' or q=='F')],thresh=0.02,show_coeff=False) for i in range(x.size)]\n",
     "ax.set_yticklabels(y_labels, rotation='30', fontsize=8, ha='right')\n",
     "ax.set_xticklabels(x_labels, rotation='30', fontsize=8,ha='left')\n",
     "ax.tick_params(axis='both',labelsize=8,direction='out')\n",
@@ -178,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +213,7 @@
        "array([18, 22, 26])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,28 +225,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.99997, 0.99996, 0.99998, 0.99997, 0.66667, 0.66665, 0.66667,\n",
-       "       0.66665, 0.16669, 0.16667, 0.16665, 0.16666, 0.16669, 0.16667,\n",
-       "       0.16665, 0.16666, 0.70007, 0.69998, 0.6999 , 0.69998, 0.70008,\n",
-       "       0.69999, 0.69991, 0.69998, 0.2    , 0.19998, 0.19999, 0.19998,\n",
-       "       0.2    , 0.2    , 0.2    , 0.19998, 0.2    , 0.19999, 0.20001,\n",
-       "       0.2    , 0.     , 0.     , 0.     , 0.     , 0.     , 0.     ,\n",
-       "       0.     , 0.     , 0.     , 0.     , 0.     , 0.     ])"
+       "array([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "BR0.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BRnorm = BR0/BR0.sum(axis=0,keepdims=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.     , 0.     , 0.     , 0.22222, 0.11111, 0.     , 0.     ,\n",
+       "        0.     , 0.     , 0.     , 0.     , 0.     ],\n",
+       "       [0.     , 0.     , 0.66666, 0.44445, 0.05555, 0.16667, 0.     ,\n",
+       "        0.     , 0.     , 0.     , 0.     , 0.     ],\n",
+       "       [0.31473, 0.06196, 0.     , 0.     , 0.     , 0.     , 0.62578,\n",
+       "        0.08161, 0.89964, 0.     , 0.     , 0.     ],\n",
+       "       [0.     , 0.27778, 0.     , 0.     , 0.     , 0.     , 0.12698,\n",
+       "        0.68571, 0.1    , 1.     , 0.     , 0.     ],\n",
+       "       [0.68527, 0.43805, 0.     , 0.     , 0.     , 0.     , 0.08851,\n",
+       "        0.23268, 0.00036, 0.     , 0.     , 0.     ],\n",
+       "       [0.     , 0.22222, 0.     , 0.     , 0.     , 0.     , 0.15873,\n",
+       "        0.     , 0.     , 0.     , 0.     , 0.     ],\n",
+       "       [0.     , 0.     , 0.     , 0.00004, 0.29588, 0.02252, 0.     ,\n",
+       "        0.     , 0.     , 0.     , 0.66847, 0.03678],\n",
+       "       [0.     , 0.     , 0.     , 0.     , 0.     , 0.28   , 0.     ,\n",
+       "        0.     , 0.     , 0.     , 0.048  , 0.68571],\n",
+       "       [0.     , 0.     , 0.     , 0.27774, 0.09301, 0.47748, 0.     ,\n",
+       "        0.     , 0.     , 0.     , 0.03153, 0.27751],\n",
+       "       [0.     , 0.     , 0.33334, 0.05555, 0.44445, 0.05333, 0.     ,\n",
+       "        0.     , 0.     , 0.     , 0.252  , 0.     ]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BRnorm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(figsize=(15,15),constrained_layout=True)\n",
+    "# ax.set_aspect('equal')\n",
+    "mat = ax.matshow(BRnorm,cmap=plt.get_cmap('hot'))\n",
+    "y = np.arange(0,len(X000_174.evecs0))\n",
+    "x = np.arange(0,len(A000_174.evecs0))\n",
+    "ax.set_yticks(y)\n",
+    "ax.set_xticks(x)\n",
+    "y_labels = [gen_state_str(X000_174.evecs0[i],X000_174.q_numbers,[q for q in X000_174.q_str if (q=='N' or q=='J' or q=='F')],thresh=0.02,show_coeff=False) for i in range(y.size)]\n",
+    "x_labels = [gen_state_str(A000_174.evecs0[i],A000_174.q_numbers,[q for q in A000_174.q_str if (q=='L' or q=='J' or q=='F')],thresh=0.02,show_coeff=False) for i in range(x.size)]\n",
+    "ax.set_yticklabels(y_labels, rotation='30', fontsize=8, ha='right')\n",
+    "ax.set_xticklabels(x_labels, rotation='30', fontsize=8,ha='left')\n",
+    "ax.tick_params(axis='both',labelsize=8,direction='out')\n",
+    "ax.grid(True,which='major',color='white',ls='--',linewidth=0.5)\n",
+    "ax.grid(False,which='minor')\n",
+    "(bot,top) = ax.get_ylim()\n",
+    "#ax.set_ylim(bot+0.5, top-0.5)\n",
+    "cbar = fig.colorbar(mat, ax=ax,fraction=0.015, pad=0.05)\n",
+    "# cbar.set_clim([0,1]);\n",
+    "# ax.set_xlim(-0.5,x.size+0.5);"
    ]
   },
   {
