Updated code to handle 171,173,174 YbOH

--- a/YbOH_Branching.ipynb
+++ b/YbOH_Branching.ipynb
@@ -16,6 +16,7 @@
     "# sns.set()\n",
     "# sns.set_palette('terrain')\n",
     "from YbOH_Energy_Levels_symbolic import YbOHLevels\n",
+    "from YbOH_Energy_Levels_symbolic import XA_branching_ratios\n",
     "np.set_printoptions(precision=5, suppress=True)"
    ]
   },
@@ -30,19 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cannot construct decoupled basis without M values\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X000_174= YbOHLevels.initialize_state('174','X000',[0,1,2,3],M_values='none',I=[0,1/2])"
+    "X000_174= YbOHLevels.initialize_state('174','X000',[0,1,2],M_values='all',I=[0,1/2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A000_174= YbOHLevels.initialize_state('174','A000',[1],M_values='all',I=[0,1/2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bz=np.linspace(1e-6,0.1,3000)"
    ]
   },
   {
@@ -51,35 +62,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cannot construct decoupled basis without M values\n"
-     ]
-    }
-   ],
-   "source": [
-    "A000_174= YbOHLevels.initialize_state('174','A000',[1,2],M_values='none',I=[0,1/2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "'bBJ'"
+       "(14770, 14785)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X000_174.hunds_case"
+    "X000_174.ZeemanMap(Bz,0,plot=True)\n",
+    "plt.ylim(14650,14660)\n",
+    "X000_174.ZeemanMap(Bz,0,plot=True)\n",
+    "plt.ylim(14770,14785)"
    ]
   },
   {
@@ -88,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from YbOH_Energy_Levels_symbolic import XA_branching_ratios"
+    "A000_174.ZeemanMap(Bz,0,plot=True)"
    ]
   },
   {
@@ -100,19 +97,258 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully converted eigenvectprs from bBJ to aBJ\n",
-      "Successfully converted eigenvectprs from bBJ to aBJ\n"
+      "E = 8606.08528594614 MHz\n",
+      "\n",
+      " -0.66897 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.66897 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.22908 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      " -0.22908 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      "\n",
+      "\n",
+      "E = 8606.097701142968 MHz\n",
+      "\n",
+      " -0.70711 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=1.0> \n",
+      "\n",
+      " -0.70711 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=1.0> \n",
+      "\n",
+      "\n",
+      "\n",
+      "E = 8606.106380716357 MHz\n",
+      "\n",
+      " 0.22908 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " 0.22908 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.66897 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      " -0.66897 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      "\n",
+      "\n",
+      "E = 8606.110632182908 MHz\n",
+      "\n",
+      " -0.70711 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=-1.0> \n",
+      "\n",
+      " -0.70711 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=-1.0> \n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "BR0 = XA_branching_ratios(X000_174,A000_174,0,0.0)\n",
-    "BR1k = XA_branching_ratios(X000_174,A000_174,1000,1e-6)"
+    "plt.figure(figsize=(10,5))\n",
+    "for (i,trace) in enumerate(A000_174.evals_B.T[:4]):\n",
+    "    A000_174.write_state(i,0,0.016)\n",
+    "    plt.plot(Bz,trace)\n",
+    "    print('\\n')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E = 14654.295619542896 MHz\n",
+      "\n",
+      " -0.01979 |Λ=0,N=1,J=0.5,F=1.0,M=-1.0> \n",
+      "\n",
+      " 0.9998 |Λ=0,N=1,J=1.5,F=1.0,M=-1.0> \n",
+      "\n",
+      " -0.00225 |Λ=0,N=1,J=1.5,F=2.0,M=-1.0> \n",
+      "\n",
+      "\n",
+      "\n",
+      "E = 14654.313864430407 MHz\n",
+      "\n",
+      " 0.00017 |Λ=0,N=1,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.01988 |Λ=0,N=1,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      " 0.9998 |Λ=0,N=1,J=1.5,F=1.0,M=0.0> \n",
+      "\n",
+      " -0.0026 |Λ=0,N=1,J=1.5,F=2.0,M=0.0> \n",
+      "\n",
+      "\n",
+      "\n",
+      "E = 14654.332124709179 MHz\n",
+      "\n",
+      " 0.01997 |Λ=0,N=1,J=0.5,F=1.0,M=1.0> \n",
+      "\n",
+      " -0.9998 |Λ=0,N=1,J=1.5,F=1.0,M=1.0> \n",
+      "\n",
+      " 0.00226 |Λ=0,N=1,J=1.5,F=2.0,M=1.0> \n",
+      "\n",
+      "\n",
+      "\n",
+      "E = 14657.321640255002 MHz\n",
+      "\n",
+      " 1.0 |Λ=0,N=1,J=1.5,F=2.0,M=-2.0> \n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(10,5))\n",
+    "for (i,trace) in enumerate(X000_174.evals_B.T[:4]):\n",
+    "    X000_174.write_state(i,0,0.016)\n",
+    "    plt.plot(Bz,trace)\n",
+    "    print('\\n')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E = 8606.05457351611 MHz\n",
+      "\n",
+      " -0.54817 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.54817 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.44666 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      " -0.44666 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      "gfactor = -0.00024629057858788965\n",
+      "\n",
+      "\n",
+      "E = 8606.063757144599 MHz\n",
+      "\n",
+      " 0.70711 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=1.0> \n",
+      "\n",
+      " 0.70711 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=1.0> \n",
+      "\n",
+      "gfactor = -0.28871651804162046\n",
+      "\n",
+      "\n",
+      "E = 8606.13709310918 MHz\n",
+      "\n",
+      " 0.44666 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " 0.44666 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=0.0,M=0.0> \n",
+      "\n",
+      " -0.54817 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      " -0.54817 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=0.0> \n",
+      "\n",
+      "gfactor = 0.0002474598644492026\n",
+      "\n",
+      "\n",
+      "E = 8606.144576144121 MHz\n",
+      "\n",
+      " -0.70711 |Λ=1,Σ=-0.5,Ω=0.5,J=0.5,F=1.0,M=-1.0> \n",
+      "\n",
+      " -0.70711 |Λ=-1,Σ=0.5,Ω=-0.5,J=0.5,F=1.0,M=-1.0> \n",
+      "\n",
+      "gfactor = 0.2887162841844482\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(10,5))\n",
+    "deltaB = Bz[1]-Bz[0]\n",
+    "for (i,trace) in enumerate(A000_174.evals_B.T[:4]):\n",
+    "    A000_174.write_state(i,0,0.1)\n",
+    "    grad = np.gradient(trace)\n",
+    "    print('gfactor =',grad[0]/deltaB/1.399624494)\n",
+    "    plt.plot(Bz,grad/deltaB)\n",
+    "    print('\\n')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gF(N,J,F,I=1/2,S=1/2):\n",
+    "    if F==0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 2*(J*(J+1)-N*(N+1)+S*(S+1))/(2*J*(J+1))*(F*(F+1)-I*(I+1)+J*(J+1))/(2*F*(F+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.3333333333333333"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gF(1,1/2,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully converted eigenvectors from bBJ to aBJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "BR0 = XA_branching_ratios(X000_174,A000_174,0,16e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully converted eigenvectors from bBJ to aBJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "BR0 = XA_branching_ratios(X000_174,A000_174,0,2000)\n",
+    "#BR_field = XA_branching_ratios(X000_174,A000_174,100,0.35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {
     "scrolled": false
    },
@@ -131,14 +367,14 @@
    "source": [
     "fig,axes = plt.subplots(1,2,figsize=(9,5),sharey=True,constrained_layout=True)\n",
     "axes[0].matshow(BR0)\n",
-    "axes[1].matshow(BR1k)\n",
+    "#axes[1].matshow(BR_field)\n",
     "for ax in axes:\n",
     "    ax.grid(False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {
     "scrolled": false
    },
@@ -188,15 +424,15 @@
     "x = np.arange(0,len(A000_174.evecs0))\n",
     "ax.set_yticks(y)\n",
     "ax.set_xticks(x)\n",
-    "y_labels = [gen_state_str(X000_174.evecs0[i],X000_174.q_numbers,[q for q in X000_174.q_str if (q=='N' or q=='J' or q=='F')],thresh=0.02,show_coeff=False) for i in range(y.size)]\n",
-    "x_labels = [gen_state_str(A000_174.evecs0[i],A000_174.q_numbers,[q for q in A000_174.q_str if (q=='L' or q=='J' or q=='F')],thresh=0.02,show_coeff=False) for i in range(x.size)]\n",
-    "ax.set_yticklabels(y_labels, rotation='30', fontsize=8, ha='right')\n",
-    "ax.set_xticklabels(x_labels, rotation='30', fontsize=8,ha='left')\n",
-    "ax.tick_params(axis='both',labelsize=8,direction='out')\n",
+    "y_labels = [gen_state_str(X000_174.evecs0[i],X000_174.q_numbers,[q for q in X000_174.q_str if (q=='N' or q=='J' or q=='F' or q=='M')],thresh=0.05,show_coeff=True) for i in range(y.size)]\n",
+    "x_labels = [gen_state_str(A000_174.evecs0[i],A000_174.q_numbers,[q for q in A000_174.q_str if (q=='J' or q=='F' or q=='M')],thresh=0.05,show_coeff=True) for i in range(x.size)]\n",
+    "ax.set_yticklabels(y_labels, rotation='30', fontsize=10, ha='right')\n",
+    "ax.set_xticklabels(x_labels, rotation='30', fontsize=10,ha='left')\n",
+    "ax.tick_params(axis='both',labelsize=10,direction='out')\n",
     "ax.grid(True,which='major',color='white',ls='--',linewidth=0.5)\n",
     "ax.grid(False,which='minor')\n",
     "(bot,top) = ax.get_ylim()\n",
-    "#ax.set_ylim(bot+0.5, top-0.5)\n",
+    "ax.set_ylim(bot+0.5, top-0.5)\n",
     "cbar = fig.colorbar(mat, ax=ax,fraction=0.015, pad=0.05)\n",
     "# cbar.set_clim([0,1]);\n",
     "# ax.set_xlim(-0.5,x.size+0.5);"
@@ -204,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +449,7 @@
        "array([18, 22, 26])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,22 +461,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0., 0.])"
+       "array([0.99994, 0.99996, 0.99996, 0.99994, 0.     , 0.     , 0.     ,\n",
+       "       0.     , 0.     , 0.     , 0.     , 0.     , 0.     , 0.     ,\n",
+       "       0.     , 0.     , 0.69999, 0.70001, 0.70007, 0.70007, 0.70005,\n",
+       "       0.70006, 0.7    , 0.70001])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "BR0.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.     , 0.     , 0.     , 0.     , 0.06806, 0.05245, 0.06782,\n",
+       "       0.     , 0.04157, 0.05556, 0.04176, 0.     , 0.22375, 0.11421,\n",
+       "       0.22369, 0.11111])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(BR0[:,0]+BR0[:,2])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(BR0[:,0]+BR0[:,2])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.11111, 0.22222, 0.11111, 0.22222, 0.     , 0.     , 0.     ,\n",
+       "       0.     , 0.     , 0.     , 0.     , 0.     , 0.     , 0.     ,\n",
+       "       0.     , 0.     ])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(BR0[:,4]+BR0[:,6])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.     , 0.     , 0.     , 0.     , 0.24446, 0.1755 , 0.     ,\n",
+       "       0.01844, 0.04893, 0.04006, 0.     , 0.     , 0.     , 0.05275,\n",
+       "       0.01163, 0.10824])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BR0[:,-8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.     , 0.     , 0.     , 0.     , 0.11421, 0.01904, 0.11433,\n",
+       "       0.     , 0.13341, 0.01778, 0.13325, 0.     , 0.02908, 0.05429,\n",
+       "       0.02904, 0.05555])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(BR0[:,-3]+BR0[:,-6])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.05556, 0.02778, 0.05556, 0.02778, 0.     , 0.     , 0.     ,\n",
+       "       0.     , 0.     , 0.     , 0.     , 0.     , 0.     , 0.     ,\n",
+       "       0.     , 0.     ])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(BR0[:,-11]+BR0[:,-14])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7    , 0.70001, 0.79715, 0.79713, 0.89707, 0.89708, 0.7    ,\n",
+       "       0.70001, 0.80292, 0.80295, 0.90287, 0.90286])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BR0.sum(axis=1)"
    ]
   },
   {
@@ -254,10 +633,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ajadbaba\\Anaconda3\\lib\\site-packages\\ipykernel\\eventloops.py:106: UserWarning: constrained_layout not applied because axes sizes collapsed to zero.  Try making figure larger or axes decorations smaller.\n",
+      "  app.exec_()\n",
+      "C:\\Users\\ajadbaba\\Anaconda3\\lib\\site-packages\\ipykernel\\eventloops.py:106: UserWarning: constrained_layout not applied because axes sizes collapsed to zero.  Try making figure larger or axes decorations smaller.\n",
+      "  app.exec_()\n"
+     ]
+    }
+   ],
+   "source": [
+    "BR0[:,4]"
+   ]
   },
   {
    "cell_type": "code",
@@ -331,7 +733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evals, evecs = X000_174.eigensystem(0,0.001)"
+    "evals, evecs = X000_174.eigensystem(0,1)"
    ]
   },
   {
