Adding a lot of files from Spring 2022, trap functionality, etc

--- a/Odd Isotope Branching.ipynb
+++ b/Odd Isotope Branching.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "X000= YbOHLevels.initialize_state('173','X000',[0,1,2,3,4],M_values='none',I=[5/2,1/2],round=12)\n",
+    "X000= YbOHLevels.initialize_state('173','X000',[0,1],M_values='none',I=[5/2,0],round=8)\n",
     "#X000= YbOHLevels.initialize_state('171','X000',[0,1,2,3,4],M_values='none',I=[1/2,0],round=12)"
    ]
   },
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "A000= YbOHLevels.initialize_state('173','A000',[1,2,3],M_values='none',I=[5/2,0],round=12)\n",
+    "A000= YbOHLevels.initialize_state('173','A000',[1],M_values='none',I=[5/2,0],round=8)\n",
     "#A000= YbOHLevels.initialize_state('171','A000',[1,2,3],M_values='none',I=[1/2,0],round=12)"
    ]
   },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -167,19 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "       1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "       0.99883965, 1.        , 0.72338257, 0.72222222, 1.        ,\n",
-       "       1.        ])"
+       "array([0.6666591 , 0.66664205, 0.99997281, 0.98910851, 0.7       ,\n",
+       "       0.71089149, 0.70002719, 0.7       , 0.16667423, 0.16669129,\n",
+       "       0.16666667, 0.16666667])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,28 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 3 4 5 6 7]\n",
-      "[ 2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17]\n"
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "[2 3 4 5 6 7]\n"
      ]
     }
    ],
    "source": [
-    "J_idx = select_J([0.5,1.5],A000)\n",
+    "J_idx = A000.select_q({'J':[0.5,1.5]})\n",
     "print(J_idx)\n",
-    "N_idx = select_N([1,2,3,4],X000)\n",
+    "N_idx = X000.select_q({'N':1})\n",
     "print(N_idx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,24 +286,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:8: RuntimeWarning: divide by zero encountered in log10\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig,ax = plt.subplots(figsize=(10,10),constrained_layout=True)\n",
     "# ax.set_aspect('equal')\n",
     "A_idx = J_idx[-1]+1\n",
     "X_idx = N_idx[-1]+1\n",
-    "log=True\n",
+    "log=False\n",
     "BR_plot = BR0\n",
     "if log:\n",
     "    BR_plot=np.log10(BR0)\n",
@@ -792,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
