Fixing all import statements

--- a/Jupyter Notebooks/YbOH/Even Isotope/17.68, 17.64 Combo Diff with X010.ipynb
+++ b/Jupyter Notebooks/YbOH/Even Isotope/17.68, 17.64 Combo Diff with X010.ipynb
@@ -6,7 +6,11 @@
    "id": "a4d44f94",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from config_path import add_to_sys_path\n",
+    "add_to_sys_path()  # Call the function to add path\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
