--- a/Jupyter Notebooks/YbOH/Odd Isotope/Odd Isotope Decay.ipynb
+++ b/Jupyter Notebooks/YbOH/Odd Isotope/Odd Isotope Decay.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ede5ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from config_path import add_to_sys_path\n",
+    "add_to_sys_path()  # Call the function to add path"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
