--- a/Jupyter Notebooks/RaX/RaOH X-C.ipynb
+++ b/Jupyter Notebooks/RaX/RaOH X-C.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from config_path import add_to_sys_path\n",
+    "add_to_sys_path()  # Call the function to add path\n",
+    "\n",
     "import numpy as np\n",
     "from sympy.physics.wigner import wigner_3j,wigner_6j\n",
     "import sympy as sy\n",
