--- a/Jupyter Notebooks/YbOH/Even Isotope/YbOH_X010_AOM_OBEs_N2.ipynb
+++ b/Jupyter Notebooks/YbOH/Even Isotope/YbOH_X010_AOM_OBEs_N2.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from config_path import add_to_sys_path\n",
+    "add_to_sys_path()  # Call the function to add path\n",
+    "\n",
     "import numpy as np\n",
     "from sympy.physics.wigner import wigner_3j,wigner_6j\n",
     "from qutip import *\n",
