--- a/Jupyter Notebooks/YbOH_Calcs_Tutorial.ipynb
+++ b/Jupyter Notebooks/YbOH_Calcs_Tutorial.ipynb
@@ -4,8 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added C:\\Users\\Arian\\Dropbox (Hutzler Lab)\\HutzlerLabShared\\Personal\\ArianJadbabaie\\Code\\Molecular-Structure\\Source Code to sys.path\n"
+     ]
+    }
+   ],
    "source": [
+    "from config_path import add_to_sys_path\n",
+    "add_to_sys_path()  # Call the function to add path\n",
+    "\n",
     "import numpy as np\n",
     "from sympy.physics.wigner import wigner_3j,wigner_6j\n",
     "import sympy as sy\n",
