--- a/notebooks/RaX/RaF_Calcs_Tutorial.ipynb
+++ b/notebooks/RaX/RaF_Calcs_Tutorial.ipynb
@@ -1,36 +1,40 @@
 {
     "cells": [
         {
-            "cell_type": "code",
-            "execution_count": 1,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
             "source": [
-                "from config_path import add_to_sys_path\n",
-                "add_to_sys_path()  # Call the function to add path\n",
-                "\n",
-                "import numpy as np\n",
-                "from sympy.physics.wigner import wigner_3j,wigner_6j\n",
-                "import sympy as sy\n",
-                "from numpy import linalg as LA\n",
-                "from IPython.display import Latex\n",
-                "import matplotlib.pyplot as plt\n",
-                "%matplotlib inline\n",
-                "\n",
-                "#The following three lines are only for asthetics and can be commented out if desired\n",
-                "import seaborn as sns\n",
-                "sns.set()\n",
-                "sns.set_palette('terrain')\n",
-                "\n",
-                "from energy_levels import MoleculeLevels\n",
-                "np.set_printoptions(precision=5, suppress=True)"
+                "# RaF Tutorial"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "This notebook computes the energy levels for $^{226}$RaF in E and B fields"
+                "for $^{226}$ RaF in $E$ and $B$ fields"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Import our library\n",
+                "from molecular_structure import MoleculeLevels"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import numpy as np\n",
+                "from sympy.physics.wigner import wigner_3j,wigner_6j\n",
+                "import sympy as sy\n",
+                "from numpy import linalg as LA\n",
+                "np.set_printoptions(precision=5, suppress=True)"
             ]
         },
         {
@@ -1431,13 +1435,6 @@
                 "plt.ylabel('EDM shift',fontsize=14)\n",
                 "plt.title(r'$^{174}$YbOH $\\tilde{X}(010)$, $N=1$',fontsize=16);"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
