--- a/notebooks/RaX/RaF_Calcs_Tutorial.ipynb
+++ b/notebooks/RaX/RaF_Calcs_Tutorial.ipynb
@@ -16,7 +16,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -26,7 +26,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -56,7 +56,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 43,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -65,7 +65,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -85,6 +85,8 @@
                         "P_values\n",
                         "trap\n",
                         "theta_num\n",
+                        "engine\n",
+                        "la_tool\n",
                         "library\n",
                         "parameters\n",
                         "matrix_elements\n",
@@ -127,7 +129,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 8,
             "metadata": {
                 "scrolled": true
             },
@@ -457,7 +459,7 @@
                             "  4.0]}"
                         ]
                     },
-                    "execution_count": 15,
+                    "execution_count": 8,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -485,7 +487,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 64,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -519,7 +521,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 10,
             "metadata": {
                 "scrolled": true
             },
@@ -543,7 +545,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -561,7 +563,7 @@
                             "[      0,      -0.66*E_z,        0,              0,        0, 0.47*B_z + 1.1e+4]])"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 11,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1453,7 +1455,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.7.13"
+            "version": "3.11.8"
         }
     },
     "nbformat": 4,
