Added instructions with the pip installable

--- a/notebooks/CaOH/CaOH_Supplemental_Plots.ipynb
+++ b/notebooks/CaOH/CaOH_Supplemental_Plots.ipynb
@@ -20,7 +20,7 @@
                 "import seaborn as sns\n",
                 "sns.set()\n",
                 "sns.set_palette('terrain')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "np.set_printoptions(precision=5, suppress=True)\n",
                 "import time\n",
                 "from matplotlib.colors import TwoSlopeNorm"
@@ -315,7 +315,7 @@
                 "import seaborn as sns\n",
                 "sns.set()\n",
                 "sns.set_palette('bright')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "from energy_levels import branching_ratios, calculate_TDMs,calculate_TDM_evecs\n",
                 "from functools import partial\n",
                 "np.set_printoptions(precision=5, suppress=True)\n",
