--- a/notebooks/YbOH/Odd Isotope/171YbOH Branching.ipynb
+++ b/notebooks/YbOH/Odd Isotope/171YbOH Branching.ipynb
@@ -17,7 +17,7 @@
                 "# import seaborn as sns\n",
                 "# sns.set()\n",
                 "# sns.set_palette('terrain')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "np.set_printoptions(precision=8, suppress=True)"
             ]
         },
