--- a/notebooks/YbOH_Calcs_Tutorial.ipynb
+++ b/notebooks/YbOH_Calcs_Tutorial.ipynb
@@ -29,7 +29,7 @@
                 "sns.set()\n",
                 "sns.set_palette('terrain')\n",
                 "\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "np.set_printoptions(precision=5, suppress=True)"
             ]
         },
