--- a/notebooks/CaOH/CaOH A(000).ipynb
+++ b/notebooks/CaOH/CaOH A(000).ipynb
@@ -20,7 +20,7 @@
                 "import seaborn as sns\n",
                 "sns.set()\n",
                 "sns.set_palette('terrain')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "np.set_printoptions(precision=5, suppress=True)\n",
                 "from energy_levels import branching_ratios, calculate_TDMs\n",
                 "\n",
