--- a/notebooks/CaOH/CaOH_X(010)_largeSO.ipynb
+++ b/notebooks/CaOH/CaOH_X(010)_largeSO.ipynb
@@ -19,7 +19,7 @@
                 "import seaborn as sns\n",
                 "sns.set()\n",
                 "sns.set_palette('terrain')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "np.set_printoptions(precision=5, suppress=True)"
             ]
         },
