--- a/notebooks/YbOH/Even Isotope/Fit Hyperfine_Thesis_revisit.ipynb
+++ b/notebooks/YbOH/Even Isotope/Fit Hyperfine_Thesis_revisit.ipynb
@@ -22,7 +22,7 @@
                 "import ujson as uj\n",
                 "sns.set()\n",
                 "sns.set_palette('bright')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "from energy_levels import branching_ratios, calculate_TDMs,calculate_TDM_evecs, calculate_forbidden_TDM_evecs, calculate_forbidden_TDMs\n",
                 "from functools import partial\n",
                 "np.set_printoptions(precision=9, suppress=True)\n",
