--- a/notebooks/YbOH/Even Isotope/YbOH_X(010)_Stark.ipynb
+++ b/notebooks/YbOH/Even Isotope/YbOH_X(010)_Stark.ipynb
@@ -20,7 +20,7 @@
                 "import seaborn as sns\n",
                 "sns.set()\n",
                 "sns.set_palette('terrain')\n",
-                "from energy_levels import MoleculeLevels\n",
+                "from molecular_structure import MoleculeLevels\n",
                 "from energy_levels import branching_ratios, calculate_TDMs\n",
                 "np.set_printoptions(precision=5, suppress=True)"
             ]
